# roombii

./: .clang-format  .gitignore  CMakeLists.txt  HOW_TO_USE.md  README.md  partitions.csv  partitions.csv.old  platformio.ini  sdkconfig.defaults  sdkconfig.featheresp32  sdkconfig.featheresp32v2
components/bluepad32/: CMakeLists.txt  uni_platform_arduino_bootstrap.cpp
components/bluepad32/include/: uni_config.h
components/bluepad32_arduino/: CMakeLists.txt
components/btstack/include/: btstack_config.h
include/: arduino_main.h  config.h  led_states.h  motor_control.h  pitches.h  songs.h  state_manager.h  wifi_manager.h
src/: CMakeLists.txt  arduino_main.cpp  main.c  motor_control.cpp  state_manager.cpp  wifi_manager.cpp
